Tue Jun 20 17:31:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.13svn

==================== 0.12 ====================

Tue Jun 20 16:16:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - Add tagline

Tue Jun 20 15:56:39 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.12

Mon Jun 19 23:23:23 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - update

Sun Jun 18 22:34:58 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	  - Use CIE L*a*b* instead of HSV, for improved results.

Sat Jun 17 16:17:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Make the close button more svelte.

Sat Jun 17 16:13:53 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Fix a booboo in window resizing.

Sat Jun 17 16:11:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/topic-label.c:
	  - Only show the expander triangle if the topic is long enough that
	    it can wrap. (#326460)

Fri Jun 16 22:45:51 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/dcc-window.c:
	  - Add a dialog box for accepting DCC chats. (#337074)

Fri Jun 16 21:02:39 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	* src/fe-gnome/main-window.c:
	  - Update transparency on window move. (#344609)

Fri Jun 16 20:53:26 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Update transparency when the desktop background changes. (#344609)

Fri Jun 16 20:32:50 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/servlist.c:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/cfgfiles.c:
	* src/common/text.c:
	* src/common/text.h:
	* src/common/dcc.c:
	* src/common/network.c: